--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 	<ul>
 		<li>Cloud development </li>
 		<li>Desktop development </li>
-		<li></li>
-		<li></li>
-		<li></li>
+		<li>Video Sport development </li>
+		<li>Mobile development </li>
+		<li>Web development </li>
 	</ul>
 
 
